tests/unit/default/syntax-error/049-create-table-parens-name-colon-type-params-eq.e.t
---- IN ----
+%table(id:decimal(10,2)=
---- OUT ----
---- ERR ----
syntax: expected <value> after `...mal(10,2)=` instead of EOL at position 25 - at line 1
---- EXIT ----
1
